fixing up mistakes <3

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <meta property="og:image" content="https://raw.githubusercontent.com/OnlyWaifus/media-files/main/media/hq.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/OnlyWaifus/media-files/main/media/hq.gif">
     <meta property="og:type" content="video.other">
 
     <meta property="og:video:url" content="https://raw.githubusercontent.com/OnlyWaifus/media-files/main/media/real.mp4">
