--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:video:height" content="1000">
     <meta property="og:video:width" content="713">
 
-    <meta http-equiv="refresh" content="0; url=https://discord.com/invite/xHX4pShEhss" />
+    <meta http-equiv="refresh" content="0; url=https://discord.com/invite/f6TNFc5Zmu" />
   </head>
   <body>
   </body>
